[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/GloriaHallelujah-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/GameOver.gd" type="Script" id=2]
[ext_resource path="res://Menu/GameOverMenu.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 320.0
margin_top = 165.0
margin_right = 960.0
margin_bottom = 525.0
grow_horizontal = 0
size_flags_horizontal = 6
size_flags_vertical = 3
theme = SubResource( 2 )
alignment = 1

[node name="Background" type="Sprite" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0.737255 )
position = Vector2( 314, 181 )
scale = Vector2( 0.7, 0.3 )
texture = ExtResource( 3 )

[node name="RetryButton" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_top = 101.0
margin_right = 640.0
margin_bottom = 140.0
text = "Reintentar"

[node name="GoMenuButton" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_top = 144.0
margin_right = 640.0
margin_bottom = 183.0
text = "Men√∫ Principal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 187.0
margin_right = 640.0
margin_bottom = 221.0
fit_content_height = true
scroll_active = false

[node name="MaxScore" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 225.0
margin_right = 640.0
margin_bottom = 259.0
fit_content_height = true
scroll_active = false

[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GoMenuButton" to="." method="_on_GoMenuButton_pressed"]
